mrpc-derive/tests/ui/null_server.stderr
error: At least one service is required
 --> tests/ui/null_server.rs:2:14
  |
2 | enum Server {}
  |              ^
