mrpc-derive/tests/ui/null_server.rs
#[mrpc::server]
enum Server {}

fn main() {
    
}
